
SUBDIRS = buildlib intl lua apt-pkg methods cmdline tools doc po

ACLOCAL_AMFLAGS = -I m4 -I buildlib

EXTRA_DIST = \
		AUTHORS.RPM \
		COPYING.GPL \
		rpmpriorities \
		test/conf.cc \
		test/extract-control.cc \
		test/hash.cc \
		test/makefile \
		test/mthdcat.cc \
		test/rpmver.cc \
		test/scratch.cc \
		test/testdeb.cc \
		test/testextract.cc \
		test/uri.cc \
		test/versions.lst \
		test/versiontest.cc \
		python/apt.i \
		python/apt.py \
		python/apt_wrap.cxx \
		python/Makefile \
		python/swig-1.3.16-cxx.patch

EXTRA_DIST += contrib/gpg-check/README
EXTRA_DIST += contrib/gpg-check/gpg-check.conf
EXTRA_DIST += contrib/gpg-check/gpg-import.lua
EXTRA_DIST += contrib/gpg-check/gpg-check.lua
EXTRA_DIST += contrib/gpg-check/gpg-import.conf

EXTRA_DIST += contrib/apt-groupinstall/apt-groupinstall.conf
EXTRA_DIST += contrib/apt-groupinstall/README
EXTRA_DIST += contrib/apt-groupinstall/groupinstall-backend-suse
EXTRA_DIST += contrib/apt-groupinstall/groupinstall-backend-comps.py
EXTRA_DIST += contrib/apt-groupinstall/apt-groupinstall.lua

EXTRA_DIST += contrib/log/README
EXTRA_DIST += contrib/log/log.lua
EXTRA_DIST += contrib/log/log.conf

EXTRA_DIST += contrib/apt-wrapper/apt.1
EXTRA_DIST += contrib/apt-wrapper/apt
EXTRA_DIST += contrib/apt-wrapper/apt.1.xml
EXTRA_DIST += contrib/apt-wrapper/apt.ent

EXTRA_DIST += contrib/list-extras/README
EXTRA_DIST += contrib/list-extras/list-extras.conf
EXTRA_DIST += contrib/list-extras/list-extras.lua

EXTRA_DIST += contrib/allow-duplicated/README
EXTRA_DIST += contrib/allow-duplicated/allow-duplicated.conf
EXTRA_DIST += contrib/allow-duplicated/allow-duplicated.lua

EXTRA_DIST += contrib/list-nodeps/README
EXTRA_DIST += contrib/list-nodeps/list-nodeps.lua
EXTRA_DIST += contrib/list-nodeps/list-nodeps.conf

EXTRA_DIST += contrib/apt-files/apt-files.lua
EXTRA_DIST += contrib/apt-files/README
EXTRA_DIST += contrib/apt-files/convert.py
EXTRA_DIST += contrib/apt-files/apt-files.conf

EXTRA_DIST += contrib/install-devel/README
EXTRA_DIST += contrib/install-devel/install-devel.lua

EXTRA_DIST += contrib/preserve-conf/preserve-conf.lua
EXTRA_DIST += contrib/preserve-conf/preserve-conf.conf

EXTRA_DIST += contrib/proxypasswd/README
EXTRA_DIST += contrib/proxypasswd/proxypasswd.lua

EXTRA_DIST += contrib/guess/README
EXTRA_DIST += contrib/guess/guess.conf
EXTRA_DIST += contrib/guess/guess.lua
