dist_man_MANS = apt.8
dist_man_MANS += apt-cache.8
dist_man_MANS += apt-cdrom.8
dist_man_MANS += apt.conf.5
dist_man_MANS += apt-config.8
dist_man_MANS += apt-get.8
dist_man_MANS += apt_preferences.5
dist_man_MANS += sources.list.5
dist_man_MANS += vendors.list.5

EXTRA_DIST = \
		apt.ent \
		style.txt \
		cache.sgml \
		files.sgml \
		guide.sgml \
		offline.sgml \
		design.sgml \
		method.sgml \
		examples/apt.conf \
		examples/configure-index \
		examples/sources.list
